fix: focus visible logic (#820)
* fix: focus visible logic

* chore: adjust style

--- a/assets/index.less
+++ b/assets/index.less
@@ -66,6 +66,11 @@
 
     &:focus {
       outline: none;
+      box-shadow: none;
+    }
+
+    &:focus-visible {
+      border-color: @primary-color;
       box-shadow: 0 0 0 3px tint(@primary-color, 50%);
     }
 
